--- a/index.html
+++ b/index.html
@@ -9,95 +9,127 @@
         /* ตั้งค่าพื้นฐาน */
         body {
             font-family: 'Arial', sans-serif;
-            line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #f9f9f9;
             color: #333;
+            line-height: 1.6;
         }
 
+        /* Header */
         header {
-            background: #333;
+            background: #0066cc;
             color: #fff;
             text-align: center;
-            padding: 20px 0;
+            padding: 40px 0;
+            margin-bottom: 40px;
         }
 
         header h1 {
             margin: 0;
-            font-size: 2rem;
+            font-size: 2.5rem;
         }
 
         /* Section Styling */
         section {
+            max-width: 1000px;
+            margin: 0 auto 40px;
             padding: 20px;
-            margin: 20px auto;
-            max-width: 800px;
             background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 12px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
-        h2 {
-            color: #333;
-            font-size: 1.5rem;
-            border-bottom: 2px solid #f4f4f4;
+        section h2 {
+            font-size: 2rem;
+            color: #0066cc;
+            margin-bottom: 20px;
+            border-bottom: 3px solid #f2f2f2;
             padding-bottom: 10px;
-            margin-bottom: 15px;
         }
 
+        /* Styling for Lists */
         ul {
             list-style-type: none;
             padding: 0;
         }
 
         li {
+            font-size: 1.2rem;
             margin: 10px 0;
-            font-size: 1.1rem;
         }
 
         li img {
-            max-width: 150px;
+            max-width: 120px;
             border-radius: 50%;
+            margin-right: 15px;
+            vertical-align: middle;
         }
 
+        li strong {
+            color: #333;
+        }
+
+        /* Contact Section */
+        #contact a {
+            color: #0066cc;
+            text-decoration: none;
+        }
+
+        #contact a:hover {
+            text-decoration: underline;
+        }
+
+        /* Footer Styling */
         footer {
             text-align: center;
             padding: 15px;
             background: #333;
             color: #fff;
-            margin-top: 40px;
         }
 
         footer p {
             margin: 0;
+            font-size: 1rem;
         }
 
-        /* เพิ่มการตกแต่งของลิงค์ */
-        a {
-            color: #0073e6;
-            text-decoration: none;
-        }
+        /* Media Queries for responsiveness */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 2rem;
+            }
 
-        a:hover {
-            text-decoration: underline;
-        }
+            section {
+                padding: 15px;
+            }
 
+            section h2 {
+                font-size: 1.5rem;
+            }
+
+            li {
+                font-size: 1rem;
+            }
+        }
     </style>
 </head>
 
 <body>
+
     <header>
         <h1>Portfolio ของนักศึกษา</h1>
+        <p>พัชราภา มหาวงค์</p>
     </header>
 
     <section id="intro">
         <h2>1. แนะนำตัว (Introduction / Profile)</h2>
-        <ul>
-            <li><strong>ชื่อ-นามสกุล:</strong> พัชราภา มหาวงค์</li>
-            <li><strong>รูปโปรไฟล์:</strong> <img src="pp.jpg" alt="Profile Image"></li>
-            <li><strong>ความสนใจ:</strong> AI, Web Dev, Cybersecurity, Data Science</li>
-        </ul>
+        <div>
+            <img src="pp.jpg" alt="Profile Image">
+            <ul>
+                <li><strong>ชื่อ-นามสกุล:</strong> พัชราภา มหาวงค์</li>
+                <li><strong>ความสนใจ:</strong> AI, Web Dev, Cybersecurity, Data Science</li>
+            </ul>
+        </div>
     </section>
 
     <section id="skills">
@@ -112,8 +144,8 @@
     <section id="projects">
         <h2>3. ผลงานที่ผ่านม (Projects / Portfolio)</h2>
         <ul>
-            <li><strong>ระบบค้าขายออนไลน์ (E-commerce)</strong></li>
-            <li><strong>เว็บไซต์ประเพณี</strong></li>
+            <li><strong>ระบบค้าขายออนไลน์ (E-commerce)</strong> - ระบบขายสินค้าออนไลน์ที่รองรับการชำระเงินและการจัดการสต็อก</li>
+            <li><strong>เว็บไซต์ประเพณี</strong> - เว็บไซต์ที่รวบรวมข้อมูลประเพณีต่างๆ ในท้องถิ่น</li>
         </ul>
     </section>
 
@@ -150,10 +182,6 @@
         <p>&copy; 2025 พัชราภา มหาวงค์</p>
     </footer>
 
-    <script>
-        // สคริปต์ JavaScript สามารถเพิ่มฟังก์ชันการทำงานต่างๆ เช่น การแสดงผลบางอย่างเมื่อคลิก
-        console.log("Welcome to my Portfolio!");
-    </script>
 </body>
 
 </html>
