--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
         }
 
         li img {
-            max-width: 120px;
+            max-width: 120px; /* ขนาดรูปโปรไฟล์ที่ลดลง */
+            height: auto;
             border-radius: 50%;
             margin-right: 15px;
             vertical-align: middle;
@@ -124,6 +125,7 @@
     <section id="intro">
         <h2>1. แนะนำตัว (Introduction / Profile)</h2>
         <div>
+            <!-- รูปโปรไฟล์ขนาดเล็ก -->
             <img src="pp.jpg" alt="Profile Image">
             <ul>
                 <li><strong>ชื่อ-นามสกุล:</strong> พัชราภา มหาวงค์</li>
@@ -174,7 +176,7 @@
         <h2>6. ติดต่อ (Contact)</h2>
         <ul>
             <li><strong>Email:</strong> <a href="mailto:66040233117@udru.ac.th">66040233117@udru.ac.th</a></li>
-            <li><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></li>
+            
         </ul>
     </section>
 
